@@ -1,0 +1,165 @@
+# BEGIN PLOT /
+YLabel=quality
+LogY=0
+LegendXPos=0.68
+# END PLOT
+
+# BEGIN PLOT /alphadependence/
+XLabel=$\alpha_s$
+XMin=0.7
+XMax=1.59
+# END PLOT
+
+# BEGIN PLOT /Rdependence/
+XLabel=$R$
+XMin=0.0
+XMax=1.7
+# END PLOT
+
+# BEGIN PLOT /Qdependence/
+XLabel=$Q$
+LogX=1
+XMin=30.0
+XMax=7000.0
+# END PLOT
+
+
+# BEGIN HISTOGRAM /
+ConnectBins=0
+ConnectGaps=0
+ErrorBars=1
+# END HISTOGRAM
+
+
+# BEGIN PLOT /alphadependence/I
+Title=$I_{1/2}$
+YMin=0
+YMax=0.301
+# END PLOT
+
+# BEGIN PLOT /Qdependence/I
+Title=$I_{1/2}$
+YMin=0
+YMax=0.301
+# END PLOT
+
+# BEGIN PLOT /Qdependence/I
+Title=$I_{1/2}$
+YMin=0
+YMax=0.301
+# END PLOT
+
+
+# BEGIN PLOT /alphadependence/I2
+Title=$I_{1/2}"$
+YMin=0
+YMax=0.401
+# END PLOT
+
+# BEGIN PLOT /Qdependence/I2
+Title=$I_{1/2}"$
+YMin=0
+YMax=0.401
+# END PLOT
+
+# BEGIN PLOT /Rdependence/I2
+Title=$I_{1/2}"$
+YMin=0
+YMax=0.401
+# END PLOT
+
+
+# BEGIN PLOT /alphadependence/grej20
+Title=$g_{\rm rej}_{20}$
+YMin=0.85
+YMax=1.01
+# END PLOT
+
+# BEGIN PLOT /Qdependence/grej20
+Title=$g_{\rm rej}_{20}$
+YMin=0.85
+YMax=1.01
+# END PLOT
+
+# BEGIN PLOT /Rdependence/grej20
+Title=$g_{\rm rej}_{20}$
+YMin=0.85
+YMax=1.01
+# END PLOT
+
+
+# BEGIN PLOT /alphadependence/grej50
+Title=$g^{\rm rej}_{50}$
+YMin=0.75
+YMax=1.01
+# END PLOT
+
+# BEGIN PLOT /Qdependence/grej50
+Title=$g^{\rm rej}_{50}$
+YMin=0.75
+YMax=1.01
+# END PLOT
+
+# BEGIN PLOT /Rdependence/grej50
+Title=$g^{\rm rej}_{50}$
+YMin=0.75
+YMax=1.01
+# END PLOT
+
+
+# BEGIN PLOT /alphadependence/qrej20
+Title=$q^{\rm rej}_{20}$
+YMin=0.85
+YMax=1.01
+# END PLOT
+
+# BEGIN PLOT /Qdependence/qrej20
+Title=$q^{\rm rej}_{20}$
+YMin=0.85
+YMax=1.01
+# END PLOT
+
+# BEGIN PLOT /Rdependence/qrej20
+Title=$q^{\rm rej}_{20}$
+YMin=0.85
+YMax=1.01
+# END PLOT
+
+
+# BEGIN PLOT /alphadependence/qrej50
+Title=$q^{\rm rej}_{50}$
+YMin=0.75
+YMax=1.01
+# END PLOT
+
+# BEGIN PLOT /Qdependence/qrej50
+Title=$q^{\rm rej}_{50}$
+YMin=0.75
+YMax=1.01
+# END PLOT
+
+# BEGIN PLOT /Rdependence/qrej50
+Title=$q^{\rm rej}_{50}$
+YMin=0.75
+YMax=1.01
+# END PLOT
+
+
+# BEGIN PLOT /alphadependence/srej
+Title=$s^{\rm rej}$
+YMin=0.6
+YMax=0.801
+# END PLOT
+
+# BEGIN PLOT /Qdependence/srej
+Title=$s^{\rm rej}$
+YMin=0.6
+YMax=0.801
+# END PLOT
+
+# BEGIN PLOT /Rdependence/srej
+Title=$s^{\rm rej}$
+YMin=0.6
+YMax=0.801
+# END PLOT
+
